tests/negative/scope/import-package-twice/test.smol
package testing;
import alpha;
import alpha;